static/css/my.css
.navbar img {
    height: 32px;
    margin: 4px;
    float: left;
}
.navbar .brand {
    cursor: default;
    color: #999 !important;
}

#load-plugin-modal .modal-body button {
    display: block;
    margin: 4px;
}

.blackbg, .blackbg .ui-widget-content .ui-state-default, .blackbg .ui-slider .ui-slider-range {
    background-color: #000000;
    background-image: none;
}
.well.blackbg {
    border: 1px solid #333333;
}

.row-fluid .time.time-past {
    margin-left: 1%; margin-right: 1.127659574468085%; }

#player {
    box-shadow: 0 0 6px 2px black;
    cursor: pointer;
}

#current-url a {
    text-overflow: ellipsis;
    overflow: hidden;
    margin-top: -10px;
    display: block;
}

.modal-body input { width: 97%; }
.modal-body .typeahead {
    position: static;
    margin-top: -0.8em;
    width: 99%;
    overflow-x: hidden;
}
.modal-body .typeahead a {
    text-overflow: ellipsis;
    overflow: hidden;
}

#link { cursor: text; }

#watchers h3 .badge {
    vertical-align: middle;
}

.span8 .row-fluid .span1.time {
    margin-top: 5px;
}
.span8 .row-fluid .span8 {
    margin-top: 10px;
}
#timeline .ui-slider-range {
    width: 100%;
}

.span4 .well h4 {
    text-align: center;
    margin-top: -0.5em;
}

#watchers .dropdown-menu {
    min-width: 100%;
}
.time {
    text-align: center;
}
#watchers .actions {
    margin-top: -2px;
}
.watcher {
    border-radius: 4px;
    padding: 1em 1em 0.5em;
    margin: 8px -1em;
    box-shadow: 0 0 8px -2px inset, 0 0 1px 1px;
}

.hidden-watcher {
    opacity: 0.5;
}

.container-fluid .row-fluid .span8 .row-fluid .span1 {
    height: 30px;
}

#info.muted > *:not(.progress-warning):not(.btn-toolbar) {
    opacity: 0.3;
}

#info .progress.progress-warning {
    margin-top: -2.85em;
}
#slider-view {
    position: relative;
    opacity: 0.8;
}
.muted #slider-view {
    opacity: 0.4;
}

#info .btn-toolbar {
    width: 316px;
    margin: auto;
    margin-bottom: 16px;
}

.muted .span8 .btn { opacity: 0.6; }

#url-file {
    opacity: 0.3;
    margin-bottom: 0px;
}

.info-item {
    margin: 0.4em 0;
}
.info-length {
    font-weight: bold;
}
.info-length:before {
    content: "Length: "
}

/** Chat box styles */
.span4 .well-small h4 {
    margin-top: -0.2em;
}

#chat-frame {
    position: relative;
    top: auto; left: auto;
    margin: 1em auto;
}
#chat-frame.blackbg {
    box-shadow: 0 0 7px rgba(255, 255, 255, 0.3);
}
#chat-messages {
    height: 16em;
}
#chat-input {
    width: 98%;
}
.blackbg #chat-input {
    background-color: #333;
}

.chat-icon {
    display: inline-block;
    height: 32px; width: 32px;
    border-radius: 0.6em;
    box-shadow: 0 0 6px -2px black, 0 0 2px inset;
}

.media {
    overflow: initial;
    margin-top: 8px;
}
.media-body {
    font-size: 0.9em;
    overflow: auto;
    border-top: 1px solid rgba(100, 100, 100, 0.5);
    padding-top: 4px;
}
.media-heading {
    line-height: 1em; }
.chat-message {
    line-height: 1.2em; }

/* --- */

